--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
+    "chart.js": "^4.4.5",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.9",
     "next": "^14.2.15",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.169.0"
   },
