--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
+    "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "three": "^0.169.0"
   },
