--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "chart.js": "^4.4.5",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.9",
+    "mdb-react-ui-kit": "^9.0.0",
     "next": "^14.2.15",
+    "package-name": "^0.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-photo-album": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
