--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.5",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.9",
+    "lottie-react": "^2.4.0",
     "mdb-react-ui-kit": "^9.0.0",
     "next": "^14.2.15",
     "package-name": "^0.1.0",
