--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-photo-album": "^2.4.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "react-video-js-player": "^1.1.1",
