--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.5",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-table": "^7.8.0",
     "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.1",
     "three": "^0.169.0",
     "yup": "^1.6.1"
   },
