--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-photo-album": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.5",
     "react-spring-3d-carousel": "^1.3.4",
