--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
     "chart.js": "^4.4.5",
     "firebase": "^10.14.1",
@@ -22,7 +23,7 @@
     "next": "^14.2.15",
     "package-name": "^0.1.0",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
