--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
     "chart.js": "^4.4.5",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.18.2",
     "lottie-react": "^2.4.0",
     "mdb-react-ui-kit": "^9.0.0",
     "next": "^14.2.15",
