--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.511.0",
     "mdb-react-ui-kit": "^9.0.0",
     "next": "^14.2.15",
     "package-name": "^0.1.0",
@@ -28,6 +29,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-photo-album": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
@@ -37,6 +39,7 @@
     "react-spring-3d-carousel": "^1.3.4",
     "react-table": "^7.8.0",
     "react-video-js-player": "^1.1.1",
+    "reactflow": "^11.11.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
     "three": "^0.169.0",
