--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@motionone/utils": "^10.18.0",
     "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
@@ -19,6 +20,7 @@
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.511.0",
     "mdb-react-ui-kit": "^9.0.0",
